--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         }
     ],
     "require": {
-        "dompdf/dompdf": "^2.0"
+        "dompdf/dompdf": "^2.0",
+        "masterminds/html5": "^2.8"
     },
     "autoload": {
         "psr-4": {
